Update the styling for preprogrammed ranges, and use adjust_format_string_for_units to determine the number of decimal places after a unit change. - In opus_support.py (line 466-467), fix the display name of saturnradii   and jupiterradii. - In widget.html (line 78-83), add text-right to set text-align: right   for values of preprogrammed ranges info. - In views.py (line 334-345), use adjust_format_string_for_units to determine   the number of decimal places after a unit change. - In opus.css (line 2303-2306), add styling to make sure each digit has   the same size in preprogrammed ranges. - In search.js (line 431), remove alignRangesDataByDecimalPoint. - In widgets.js (line 1005), remove alignRangesDataByDecimalPoint. - In param_info_ranges.json, add "format" as the key to store the number   of decimal places for default unit for each category.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -2097,30 +2097,32 @@ ul.ui-autocomplete a.ui-state-active {
     left: -0.5em !important;
 }
 
-@media (max-width: 680px) {
+@media (max-width: 750px) {
     /* Make sure ring radius dropdown never wraps names by letters */
-    #widget__RINGGEOringradius .op-preprogrammed-ranges-data-name {
+    /* #widget__RINGGEOringradius .op-preprogrammed-ranges-data-name { */
+    .op-preprogrammed-ranges-data-name {
         word-break: keep-all;
     }
 }
 
-@media (min-width: 680px) {
+@media (min-width: 750px) {
     /* When widget width is wide, don't wrap ranges names */
     .op-preprogrammed-ranges-data-header {
         white-space: nowrap;
     }
 
     /* Make sure ring radius dropdown starts to wrap the names when width is
-    less than 680px */
-    #widget__RINGGEOringradius .op-preprogrammed-ranges-data-name {
+    less than 750px */
+    /* #widget__RINGGEOringradius .op-preprogrammed-ranges-data-name { */
+    .op-preprogrammed-ranges-data-name {
         white-space: nowrap;
     }
 }
 
 /* Make sure wavelength dropdown never wrap the names */
-#widget__wavelength .op-preprogrammed-ranges-data-name {
+/* #widget__wavelength .op-preprogrammed-ranges-data-name {
     white-space: nowrap;
-}
+} */
 
 /* Make sure ranges names can be wrapped when dropdown width is narrow */
 .op-preprogrammed-ranges .op-scrollable-menu li {
@@ -2141,15 +2143,23 @@ ul.ui-autocomplete a.ui-state-active {
 }
 
 /* This class will be assigned to ranges name with long first word */
-.op-word-break-all {
+.op-preprogrammed-ranges-data-item[data-name*="Epimetheus"]
+.op-preprogrammed-ranges-data-name {
     word-break: break-all !important;
 }
+/* .op-word-break-all {
+    word-break: break-all !important;
+} */
 
-@media (max-width: 780px) {
+@media (max-width: 900px) {
     /* Make long word break earlier */
-    .op-word-break-all {
+    .op-preprogrammed-ranges-data-item[data-name*="Epimetheus"]
+    .op-preprogrammed-ranges-data-name {
         white-space: normal !important;
     }
+    /* .op-word-break-all {
+        white-space: normal !important;
+    } */
 }
 
 .op-preprogrammed-ranges-data-name {
@@ -2288,4 +2298,9 @@ at the right of -- OR -- label. */
 /* Hide values for different units in preprogrammed ranges */
 .op-hide-different-units-info {
     display: none !important;
+}
+
+/* Make sure each digit has the same size in preprogrammed ranges */
+.op-preprogrammed-ranges-data-item {
+    font-variant-numeric: tabular-nums;
 }
